tests/baselines/reference/parserTypeAssertionInObjectCreationExpression1.errors.txt
parserTypeAssertionInObjectCreationExpression1.ts(1,1): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'any'.
parserTypeAssertionInObjectCreationExpression1.ts(1,5): error TS1109: Expression expected.
parserTypeAssertionInObjectCreationExpression1.ts(1,6): error TS2304: Cannot find name 'T'.
parserTypeAssertionInObjectCreationExpression1.ts(1,8): error TS2304: Cannot find name 'Foo'.


==== parserTypeAssertionInObjectCreationExpression1.ts (4 errors) ====
    new <T>Foo()
    ~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'any'.
        ~
!!! error TS1109: Expression expected.
         ~
!!! error TS2304: Cannot find name 'T'.
           ~~~
!!! error TS2304: Cannot find name 'Foo'.